EKS Complete/k8s/templates/deployment.yaml
---
# SImple Deployment file involves Youtube Clone App.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: youtube
  template:
    metadata:
      labels:
        app: youtube
    spec:
      containers:
        - name: youtube
          image: jadonharsh/reactapp
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 100m
