EKS Complete/k8s/templates/ingress.yaml
---
# ALB Ingress controller resource with ssl/tls security.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtube-ing
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/certificate-arn: arn of tls certificate
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'  // Allow traffic on port 80 and 443
    # alb.ingress.kubernetes.io/ssl-redirect: '443' // Redirect all traffic to HTTPS
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: youtube-svc
      port:
        number: 80
  rules:
    - host: terraform.jadonharsh.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: youtube-svc
                port:
                  number: 80
